argocd-httpd/src/deployment-httpd-24.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: httpd-24    
  labels:
    app: httpd-24
    app.kubernetes.io/component: httpd-24
    app.kubernetes.io/instance: httpd-24
    app.kubernetes.io/name: httpd-24
    app.kubernetes.io/part-of: httpd-24-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: httpd-24
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: httpd-24
        deployment: httpd-24
    spec:
      containers:
        - name: httpd-24
          image: registry.redhat.io/ubi9/httpd-24
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            limits:
              cpu: '200'
            requests:
              cpu: '100'
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
